AC_PREREQ(2.53)
AC_INIT(libphone-ui, 0.0.1, http://www.shr-project.org/)
AM_INIT_AUTOMAKE()
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_GNU_SOURCE
AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(FSO_GLIB, fso-glib-1.0)
PKG_CHECK_MODULES(SHR_GLIB, shr-glib-1.0)
PKG_CHECK_MODULES(FSO_FRAMEWORK, fsoframework-2.0)
PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.29.3)
PKG_CHECK_MODULES(LIBPHONE_UTILS, libphone-utils)
PKG_CHECK_MODULES(ALSA, alsa)
PKG_CHECK_MODULES(X11, x11)

EXPAND(SYSCONFDIR, $sysconfdir)
EXPAND(LIBDIR, $libdir)

AC_OUTPUT([
Makefile
src/Makefile
src/phoneui.h
libphone-ui.pc
])

